# BinaryStream

./: CMakeLists.txt  README.md
src-example/: CMakeLists.txt  main.cpp
src/BinaryStream/: BinaryStream.hpp
